# TitanGameEngine

./: CMakeLists.txt  Game_Definitions.hpp  Game_Features.hpp  Game_States.hpp  README.md  Titan_Assets.hpp  Titan_Audio.cpp  Titan_Audio.hpp  Titan_Context.hpp  Titan_Core.hpp  Titan_Debug.hpp  Titan_ECS.hpp  Titan_Engine.cpp  Titan_Engine.hpp  Titan_Events.hpp  Titan_Graphics.hpp  Titan_Impl.cpp  Titan_Input.hpp  Titan_Math.hpp  Titan_Physics.hpp  Titan_Platform.hpp  Titan_Platform_Win32.cpp  Titan_Scheduler.hpp  Titan_Serializer.hpp  Titan_State.hpp  Titan_System.hpp  Titan_SystemID.hpp  Titan_UI.hpp  Titan_Window.hpp  main.cpp
src/: main.cpp  test.cpp
src/Assets/: Loader.cpp  Loader.hpp  Texture.hpp
src/Components/: Sprite.hpp  Transform.hpp
src/Core/: Engine.cpp  Engine.hpp  FrameContext.hpp  Scheduler.cpp  Scheduler.hpp  lSystem.hpp
src/Core/Systems/: InputSystem.cpp  InputSystem.hpp  JoystickSystem.cpp  JoystickSystem.hpp  PlatformPollSystem.cpp  PlatformPollSystem.hpp  RenderEntitySystem.cpp  RenderEntitySystem.hpp  RenderEntitySystem_link.cpp  RenderSystem.cpp  RenderSystem.hpp
src/Debug/: Debug.cpp  Debug.hpp
src/ECS/: Entity.hpp  World.cpp  World.hpp
src/Graphics/: GraphicDevice.hpp  GraphicsDevice_GL.cpp
src/Input/: InputManager.hpp  InputManger.cpp  Joystick.cpp  Joystick.hpp
src/Platform/: Window.hpp  Window_Win32.cpp
src/Scene/: SceneManager.cpp  SceneManager.hpp  SceneSerializer.cpp  SceneSerializer.hpp
